<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Conspectus Manager</string>
    <string-array name="sort_type">
        <item>By name</item>
        <item>By date added</item>
        <item>By conspectus date</item>
    </string-array>

    <string name="add_conspect_title">Add conspectus</string>
    <string name="all_conspects_title">All conspectus</string>
    <string name="new_conspect_title">New conspectus</string>
    <string name="edit_conspect_title">Edit conspectus</string>

    <string name="basic">Basic</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter the title</string>
    <string name="subject">Subject</string>
    <string name="subjects">Subjects</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="photos">Photos</string>
    <string name="optional">Optional</string>
    <string name="add_photo">Add photo</string>
    <string name="select_action">Choose an action</string>
    <string name="make_photo">To make\na photo</string>
    <string name="select_from_gallery">Choose from\ngallery</string>
    <string name="add_conspect">Add\nconspectus</string>
    <string name="all_conspects">All\nconspectus</string>
    <string name="page">Page</string>
    <string name="page_of">of</string>
    <string name="camera_error">Camera error</string>
    <string name="select_photos">Select photos</string>
    <string name="gallery_error">Gallery error</string>
    <string name="all">All</string>
    <string name="other">Other</string>
    <string name="conspect_created">Conspectus created</string>
    <string name="empty_conspect_title">The conspectus title is required</string>
    <string name="empty_photos">Conspectus must contain at least one photo</string>
    <string name="added_photos">Photos added</string>
    <string name="added_photo">Photo added</string>
    <string name="click_to_add_conspect">Click to add conspectus</string>
    <string name="conspect_changed">Conspectus changed</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="changes_not_save">Changes will not be saved</string>
    <string name="conspect_will_delete">Conspectus will be deleted</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="delete_conspect">Delete conspectus</string>

    <string name="tasks">Tasks</string>

    <string name="title_activity_view_images">ActivityViewImages</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="add_task">Add a task</string>
    <string name="task_added">Task added</string>
    <string name="chosen_subject">Chosen subject</string>
    <string name="select_conspectus">Select conspectus</string>

    <string name="enter_a_title">Enter a title</string>
    <string name="enter_text">Enter the text of the note</string>
    <string name="task_will_delete">Task will be deleted</string>
    <string name="edit_task">Edit task</string>
    <string name="task_edited">Task edited</string>
</resources>
