<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/select_action"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButtonAdd"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            app:srcCompat="@drawable/ic_library_add_white_48dp"
            android:background="@drawable/background_1"
            android:onClick="onClickAdd" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/add_conspect"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonAll"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:padding="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                app:srcCompat="@drawable/ic_library_books_white_48dp"
                android:background="@drawable/background_1"
                android:onClick="onClickAll" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/all_conspects"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>